Deduplicate `Add-Opens` directives in tests